--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack --mode production --config webpack.config.js",
+    "build": "node ./script/create-env.js && npx webpack --mode production --config webpack.config.js",
     "dev": "npx webpack --config webpack.config.dev.js",
     "build:watch": "npx webpack --watch --config webpack.config.js"
   },
